2009-11-19  Ben Elliston  <bje@au.ibm.com>

	* arlex.l: Enable noinput, nounput flex options.
	* syslex.l: Likewise.

2009-11-17  Paul Brook  <paul@codesourcery.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* readelf.c (arm_attr_tag_CPU_arch): Add v7E-M.

2009-11-16  Kai Tietz  <kai.tietz@onevision.com>

	* windmc.c (set_endianess): Use bfd_get_target_info.
	* windres.c (set_endianess): Likewise.
	(find_arch_match): Removed.

2009-11-11  Nick Clifton  <nickc@redhat.com>

	* po/id.po: Updated Indonesian translation.

2009-11-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* configure.in: Stop checking for fopen64 and stat64.
	* strings.c (file_off, file_open, statbuf, file_stat): Remove.
	(strings_file): Change file_off to file_ptr, file_open to fopen,
	statbuf to struct stat and file_stat to stat.
	(get_char): Change parameter type file_off * to file_ptr *.
	(print_strings): Change parameter and variable `start' type file_off to
	file_ptr.
	* configure: Regenerate.
	* config.in: Regenerate.

2009-11-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* configure.in: Call ACX_LARGEFILE.  Stop calling AC_PLUGINS,
	AC_SYS_LARGEFILE and checking the Solaris largefile exception.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2009-11-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* bucomm.c (get_file_size): Update comment for the error return value.

2009-11-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* readelf.c (slurp_hppa_unwind_table): Don't relocate address twice.

2009-11-05  Kai Tietz  <kai.tietz@onevision.com>

	* dllwrap.c (is_leading_underscore): New variable.
	(cpu_type): New enum type.
	(which_cpu): New variable.
	(usage): Add new options --no-leading-underscore
	and --leading-underscore.
	(long_options): Likewise.
	(OPTION_NO_LEADING_UNDERSCORE): New define.
	(OPTION_LEADING_UNDERSCORE): Likewise.
	(main): Initialize which_host, pass new options
	to dlltool, do underscoring dependent on